# nkar

./: .codecov.yml  .gitattributes  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  color.cpp  color.h  comparator.cpp  comparator.h  image.cpp  image.h  main.cpp  point.cpp  point.h
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Config.cmake.in  color.cpp  color.h  comparator.cpp  comparator.h  export.h  image.cpp  image.h  point.cpp  point.h
test/: CMakeLists.txt  main.cpp
